--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,12 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
 anyhow = "1.0"
 clap = { version = "4", features = ["derive"] }
-# Optional TLS support (enable with --features tls)
+# Optional TLS support (enable with `--features tls`)
 rustls = { version = "0.21", optional = true }
 tokio-rustls = { version = "0.24", optional = true }
+rustls-pemfile = { version = "1.0", optional = true }
 ring = { version = "0.16", optional = true }
+
+[features]
+default = []
+tls = ["rustls", "tokio-rustls", "rustls-pemfile"]
