--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
 anyhow = "1.0"
 clap = { version = "4", features = ["derive"] }
+once_cell = "1"
 # Optional TLS support (enable with `--features tls`)
 rustls = { version = "0.21", optional = true }
 tokio-rustls = { version = "0.24", optional = true }
